# RA-Handin-2

./: .gitignore  CMakeLists.txt  main.cpp  visualization.ipynb
hash-function/: FourWiseHash.h  FourWiseHashSlow.h  HGHash.h  HGHashMultiplyShift.h  HGHashSlow.h  MultiplyShiftHash.h  MultiplyShiftHashTask9.h  SplitMixHash.h  StdHash.h
output-task7/: chaining  sketch, r=2^10  sketch, r=2^20  sketch, r=2^7
output-task8/: sketch
output-task9/: sketch
random-gen/: PseudoRandomGen.h  RandomGen.h
sum-set/: ChainingSumSet.h  SketchSumSet.h  SumSet.h
test/: HashTester.h  SketchTester.h  SumSetTester.h
